HomePage: z-index added to HeroSlice & IntroductionSlice to avoid hero slice's gradient background to superimpose

--- a/src/components/slices/hero_slice/index.scss
+++ b/src/components/slices/hero_slice/index.scss
@@ -1,4 +1,5 @@
 #hero_slice {
+  z-index: 0;
   position: relative;
   width: 100vw;
   height: 100vh;
