--- a/src/components/slices/introduction_slice/index.scss
+++ b/src/components/slices/introduction_slice/index.scss
@@ -1,4 +1,5 @@
 #introduction_slice {
+  z-index: 1;
   width: 100vw;
   height: 100vh;
   background-color: black;
